still mid network-architecture fallout